--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sequelize": "sequelize"
+    "sequelize": "sequelize",
+    "gulp": "gulp",
+    "devserver": "gulp"
   },
   "repository": {
     "type": "git",
@@ -21,8 +23,13 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mysql2": "^1.3.6",
-    "nodemon": "^1.12.1",
-    "sequelize": "^4.3.1",
+    "sequelize": "^4.3.1"
+  },
+  "devDependencies": {
+    "browserify": "^14.5.0",
+    "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-clean": "^0.3.2",
     "sequelize-cli": "^3.0.0"
   }
 }
