--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "jsonwebtoken": "^8.1.0",
     "mysql2": "^1.3.6",
     "sequelize": "^4.3.1"
   },
